Fix "Load a File" button alignment

--- a/styles.sass
+++ b/styles.sass
@@ -243,7 +243,7 @@ button
         width: 100%
 
   .fileInputTrick
-    display: inline
+    display: inline-block
     position: relative
     cursor: pointer
 
